--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-native-tvos",
+  "name": "react-native-dish",
   "version": "0.68.2-8",
   "bin": "./cli.js",
   "description": "A framework for building native apps using React",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:react-native-tvos/react-native-tvos.git"
+    "url": "git@github.com:PuttarajuPM/react-native-tvos.git"
   },
   "engines": {
     "node": ">=14"
